# stick

./: .gitignore  .swp  Cargo.toml  index.html  output (1).json
data/: output.cbor
src/: animation.rs  background.rs  human.rs  main.rs  tester.rs
style/: styles.css
