[package]
name = "yew-app"
version = "0.1.0"
edition = "2018"

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19"
gloo-render = "0.1.0"
console_log = "0.2.0"
log = "^0.4"
wasm-bindgen = "0.2.79"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'SvgGraphicsElement',
  'HtmlAnchorElement',
  'SvgMatrix',
]
